--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,3 +163,11 @@ select{
 .ul-footer>li{
     background-color: greenyellow;
 }
+
+.closing{
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+    width: 80%;
+    margin: auto;
+}
